Added testing database; need to implement secrets.

--- a/Application/appsettings.Development.json
+++ b/Application/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=banking_test;Username=banking_user;Password=password"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
